<resources>
    <string name="app_name">Quiz Isen</string>


    <!-- LOGIN PAGE -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Se connecter !</string>
    <string name="signup">Enregistre toi !</string>
    <string name="stay_connected">resté connecté</string>
    <string name="logo">logo</string>

    <!-- CREATE PROFILE -->
    <string name="picture">Choose your profile image</string>
    <string name="Continue">Continuer !</string>


    <!-- PROFIL PAGE -->
    <string name="editImageButton">Edit your image</string>
    <string name="profilText">Nom de Profil : </string>
    <string name="scoreText">Score : </string>
    <string name="logout">Logout</string>


    <!-- PREFERENCES   -->
    <string name="checkboxPref">SharedPreferences</string>
    <string name="usernamePref">SharedPreferences</string>
    <string name="passwordPref">SharedPreferences</string>

    <!-- Menu Déroulant   -->
    <string name="menu_logout_button">déconnexion</string>
    <string name="menu_profil_button">profil</string>
    <string name="menu_return_button">home</string>
    <string name="number_of_quizz">nombre de quiz réussi</string>


</resources>
